--- a/sections/Design/BNDesig/DesignBN.tex
+++ b/sections/Design/BNDesig/DesignBN.tex
@@ -1,4 +1,4 @@
-\chapter{Model Design}
+\chapter{Model Design}\label{BNModel}
 
 The purpose of the belief network is to predict the vector of the
 target. This allows us to make a general prediction of the direction and speed
