--- a/sections/Appendix/MI/MIData.tex
+++ b/sections/Appendix/MI/MIData.tex
@@ -1,6 +1,15 @@
-\chapter{MI Data}\label{AppendixMIData}
-Below the data which are used in the design of the model can be seen.\nl
-\dataTable{MIData60}{The data from where the target has a speed of
-60\%}{Data60}
+\chapter{Data for the Belief Network}\label{AppendixMIData}
+The following is the collection of 2 sets of 10 observations made
+by \name. \autoref{table:Data60} is a set taken at 60\% of maximum speed while
+\autoref{table:Data80} is taken at 80\%.
+\dataTable{MIData60}{The data from where the
+target has a speed of 60\%}{Data60}
 \dataTable{MIData80}{The data from where the target has a speed of
 80\%}{Data80}
+
+When analysed these observations provide the vectors which can be seen in
+\autoref{table:Vec80} and \autoref{table:Vec60}.
+\dataTable{Vec80}{The resulting vectors based on the data from the set
+at 80\%}{Vec80}
+\dataTable{Vec60}{The resulting vectors based on the data from the set
+at 60\%}{Vec60}
