--- a/sections/Design/BNDesig/DomainsAndProbs.tex
+++ b/sections/Design/BNDesig/DomainsAndProbs.tex
@@ -46,15 +46,15 @@ State & Angle (deg) & Distance (cm) \\ \hline
 \fix{}{dobbelt tjek target hastighed}
 The states for the vectors consist of the percieved speed of the target, that
 is, how far along the x and y-axis it has moved per millisecond. These vectors
-were found through \fix{}{Ref til BN-learning}, and are for simplicity denoted
-by how fast it is moving, 35cm/s, 50cm/s and when it is a 'bad vector' referred
-to as \textbf{BV}. A 'bad vector' is a vector that is alot different from what
-the expected vector is. If an additional vector is added, one that
-does not drive straight in front of it, we would need to denote them by their
-actual vector for clarity. The vectors are limited to 3 states, as 1 additional
-vector will result in 98 additional cases, due to all the other
-nodes depending on the vectors. The domain for the vectors are presented in
-\autoref{vecDom}.
+were determined as an average of vectors which were \fix{reasonable close}{hvad
+er close?} to the expected speed. They are for simplicity denoted by how fast
+the target is moving, 35cm/s, 50cm/s and when it is a 'bad vector', referred to as
+\textbf{BV}. A 'bad vector' is a vector that is exceeds this difference from
+the expected vector. If an additional vector is added, one that does not drive
+perpendicular in front of it, we would need to denote them by their actual
+vector for clarity. The vectors are limited to 3 states, as 1 additional vector
+will result in 98 additional cases, due to all the other nodes depending on the
+vectors. The domain for the vectors are presented in \autoref{vecDom}.
 
 \begin{table}[H]
 \centering
@@ -74,6 +74,30 @@ nodes with a continuous set of values, we can consider additional variables,
 which can make up for the loss of accuracy. It also allows us group the values
 that seem unlikely to be used often into big intervals.
 
+\subsection{Learning the Beliefs}
+
+
+For each speed we want to implement in the model, we need a dataset, see
+\autoref{AppendixMIData}, which is based on the sensor readings from turret. In
+order to gather datasets a test was performed. The test was conducted such that
+the observations were grouped into a set: each set consists of 3 sensor
+readings, the first two observations of a set are used to construct a vector V1
+and the last two observations are used to construct a vector V2, these vectors
+are then normalized by dividing each with time difference between each of the observations. Using this method we end up
+with a set of vectors based upon sensor observations, which means we know the
+values that resulted in the vector, which will come in handy in the next step.
+Next step is to group the resulting vectors according to whether or not it was
+deemed a good vector or a bad vector. After going through the vectors for each
+speed, we end up with two sorted list of vectors, one containing all the good
+vectors and one containing the faulty ones. Next step is plotting the 
+measurements that resulted in a given vector into a table, based on the sensor
+readings - the way this was accomplished was to look at a given vector and then
+reference the sensor readings. For example, we wanted to know the probability of
+a vector given an angle - so what we did was make a table with two columns -
+good and bad indicating the quality of the vector. We then referenced the
+specific vector and then plotted in the two angle values used to calculate the
+given vector. Doing this for each vector, we end up with a probability table.
+The same method is used to construct a probability table for distance.
 \subsection{Constructing the Probability Tables}
 
 % The domain for the vectors is determined by gathering data about the
