--- a/sections/Appendix/MI/MIData.tex
+++ b/sections/Appendix/MI/MIData.tex
@@ -1,14 +1,22 @@
 \chapter{Data for the Belief Network}\label{AppendixMIData}
-The following is the collection of 2 sets of 10 observations made
-by \name. \autoref{table:Data60} is a set taken at 60\% of maximum speed while
-\autoref{table:Data80} is taken at 80\%.
-\dataTable{MIData60}{The data from where the
-target has a speed of 60\%}{Data60}
+The following is the collection of 2 sets of 10 tests made by \name. Each test
+produced three reading of the x and y coordinate, the time, the angle and the
+distance to the target. \autoref{table:Data60} is the set taken at 60\% of
+maximum speed while \autoref{table:Data80} is taken at 80\%. The sets were
+collected by having the target move perpendicular to the turret.
+\dataTable{MIData60}{The data from where the target has a speed of 60\%}{Data60}
 \dataTable{MIData80}{The data from where the target has a speed of
 80\%}{Data80}
 
 When analysed these observations provide the vectors which can be seen in
-\autoref{table:Vec80} and \autoref{table:Vec60}.
+\autoref{table:Vec80} and \autoref{table:Vec60}. This is done by creating V1 as
+a vector representing difference between the second and first observation, in
+addition it is normalized such that it appears as in the form cm/ms. V2 is
+likewise created as a representation of the difference between the third and
+second observation, also normalized by time.
+
+\fix{}{mention the distance it is expected to traverse}
+
 \dataTable{Vec80}{The resulting vectors based on the data from the set
 at 80\%}{Vec80}
 \dataTable{Vec60}{The resulting vectors based on the data from the set
